--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,54 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>HomeServlet</display-name>
+    <servlet-name>HomeServlet</servlet-name>
+    <servlet-class>br.com.joaogabriel.bookstore.controller.HomeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>HomeServlet</servlet-name>
+    <url-pattern>/HomeServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>LoginServlet</display-name>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>br.com.joaogabriel.bookstore.controller.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/LoginServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AdminHomeServlet</display-name>
+    <servlet-name>AdminHomeServlet</servlet-name>
+    <servlet-class>br.com.joaogabriel.bookstore.controller.admin.AdminHomeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AdminHomeServlet</servlet-name>
+    <url-pattern>/AdminHomeServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ListUserServlet</display-name>
+    <servlet-name>ListUserServlet</servlet-name>
+    <servlet-class>br.com.joaogabriel.bookstore.controller.admin.ListUserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListUserServlet</servlet-name>
+    <url-pattern>/admin/ListUserServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SaveUserServlet</display-name>
+    <servlet-name>SaveUserServlet</servlet-name>
+    <servlet-class>br.com.joaogabriel.bookstore.controller.admin.SaveUserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SaveUserServlet</servlet-name>
+    <url-pattern>/admin/SaveUserServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
